PRODEV-1788. Fix calendar to ppadding on mobile

--- a/src/components/Calendar/CalendarMonthView/index.scss
+++ b/src/components/Calendar/CalendarMonthView/index.scss
@@ -1,41 +1,15 @@
 .container {
-  // overflow: auto;
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 
   a {
-    // color: #8e352e;
     text-decoration: none;
     &:hover {
       text-decoration: none;
     }
   }
-
-  // ul {
-  //   list-style: none;
-  //   // padding: 0;
-  //   margin: 0;
-  //   width: 100%;
-  //   display: flex;
-  // }
-  // li {
-  //   list-style-type: none;
-  //   // display: inline-block;
-  //   // width: 13.1%;
-  //   // text-align: center;
-  //   margin-bottom: 4px;
-  //   font-size: 12px;
-  //   // color: #777;
-
-  //   width: 14.2857142857%;
-  //   padding: 5px;
-  //   box-sizing: border-box;
-  //   border: 1px solid #ccc;
-  //   margin-right: -1px;
-  //   margin-bottom: -1px;
-  // }
 }
 
 .daysContainer {
@@ -47,9 +21,7 @@
 
 @media (max-width: 768px) {
   .container {
-    // .weekdays, .other-month {
-    //   display: none;
-    // }
+    margin-top: 46px;
 
     li {
       height: auto !important;
@@ -58,9 +30,5 @@
       padding: 10px;
       margin-bottom: -1px;
     }
-
-    // .date {
-    //   float: none;
-    // }
   }
 }
